--- a/fuel pumper interface/css/PI.css
+++ b/fuel pumper interface/css/PI.css
@@ -14,12 +14,39 @@
 }
 
 .card {
-    float: left;
+    float: none;
     width: 30%;
     padding: 0 0px;
-    margin-left:20px;
+    margin-left:35%;
     margin-right:20px;
     margin-top:10px;
+    border-radius: 10px;
+    background-color: #EDF5E1;
+}
+
+.address {
+    text-align: center;
+}
+
+.clsss1{
+
+    float: left;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+.box2{
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.fuel_type{
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-bottom: 20px;
+    width: 300px;
+
 }
 
 .type{
@@ -27,17 +54,71 @@
 
 }
 
-.submit{
-    margin-top: 20px;
-    text-align: center;
+#submit1{
+
+    width:100%;
+    height: 40px;
+    border: none;
+    margin-left: 75px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+    background-color: black;
+    color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+#submit1:hover{
+    background-color: white;
+    color: black;
+}
+
+.liters{
+    margin-top: 10px;
+    margin-bottom: 15px;
+    width: 350px;
+    height :50px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-left:20px;
+
+}
+
+.price{
+    margin-top: 10px;
+    width: 350px;
+    height :50px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-left:20px;
+    margin-bottom: 15px;
+}
+
+.fuel-station-heading{
+
+    margin-bottom: 40px;
 
 }
 
 
 @media (max-width: 800px) {
 
+    .clsss1{
+        margin-left: 0px;
+        margin-top: -10px;
+        margin-bottom: 20px;
+    }
+
+    .box2{
+        margin-left: 0;
+
+    }
+
     .fuel-station-heading{
-        margin-top: 20px ;
+        margin-top: 10px ;
+        margin-bottom: 0;
         text-align: center;
     }
 
@@ -47,25 +128,40 @@
         background-color: #EDF5E1;
         border: none;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        margin-left: 20px;
     }
 
     .liters{
         float: right;
-        width:35%;
-    }
-
-    .box2{
-        margin-top: 40px;
+        width:55%;
+        border-radius: 8px;
+        margin-bottom: 10px;
+        border:none;
+        padding-left: 15px;
+        height: 28px;
+        margin-top: 0;
     }
 
     .price{
         float: right;
-        width: 35%;
+        width: 55%;
         margin-bottom: 20px;
+        border-radius: 8px;
+        border: none;
+        padding-left: 15px;
+        margin-top: 0;
+        height: 28px;
+
+    }
+
+    .box2{
+        margin-top: 30px;
     }
 
     .fuel_type{
-        margin-top: 40px;
+        margin-top: 30px;
+        margin-left: 0;
+        width: 100%;
 
     }
 
@@ -105,14 +201,20 @@
     #submit1 {
         margin-top:-30px;
         margin-bottom: 10px;
+        margin-left: 15px;
         border-radius: 10px;
         width: 90%;
         height: 40px;
-        background-color: white;
-        color: black;
+        background-color: black;
+        color: white;
         border: none;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
+    }
+
+    #submit1:hover{
+        background-color: white;
+        color: black;
     }
 
 
