--- a/Search fuel stations/css/new.css
+++ b/Search fuel stations/css/new.css
@@ -1,94 +1,87 @@
 body{
-    background-image: url('../images/pg1-1.jpeg');
+    background-image: url("../images/pg1-1.jpeg");
     background-repeat: no-repeat;
+    background-position: center center;
     background-attachment: fixed;
     background-size: cover;
-    margin: 0;
+    background-color: #464646;
+
 }
 
-#search2{
-    margin-top: -50px;
-    margin-right : 433px ;
-    width:10%;
-    height: 50px;
-    float : right;
-    padding-left:20px;
-    border: none;
+.search{
+    margin-left: 15%;
+    margin-top: 22%;
 }
 
 #search1{
-    margin-top : 25%;
-    margin-left: 20%;
-    width : 40%;
-    height: 50px;
-    padding-left: 20px;
+    width: 45%;
+    height: 55px;
+    border: none;
     border-radius: 10px 0px 0px 10px;
-    border: 1px;
+    padding-left: 20px;
 
 }
 
-#submit{
-    width:40%;
-    height: 50px;
-    margin-top:-50px;
+#search2{
+    width: 20%;
+    height: 55px;
+    border: none;
+    padding-left: 20px;
+    margin-left:-3px;
 
 }
 
 .sub{
-    margin-top: -50px;
-    margin-right:290px;
-    width:10%;
-    height: 50px;
-    float : right;
-    margin-bottom: 20%;
-    border-radius: 0px 10px 10px 0px;
+    width: 15%;
+    height: 55px;
     border: none;
+    border-radius: 0px 10px 10px 0px;
     background-color: dodgerblue;
-    color:white;
+    color: white;
+    margin-left:-3px;
+
 }
 
 .sub:hover{
+
     background-color: darkblue;
-}
-
-.dropdown{
-
-    margin-left: 80%;
-    float : right;
+    color: white;
 
 }
+
 
 @media (max-width: 800px) {
+    body{
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+        background-size: cover;
+        background-color: #464646;
+    }
 
     #search1{
         width: 90%;
-        float: none;
-        margin-top: 40%;
-        margin-left: 20px;
+        margin-left: -10px;
         border-radius: 10px;
+        height: 50px;
+        margin-bottom: 20px;
+        margin-top: 100px;
+
     }
 
     #search2{
         width: 90%;
-        float: none;
-        margin-top: 20px;
-        margin-left: 20px;
+        margin-left: -10px;
         border-radius: 10px;
-
+        height: 50px;
+        margin-bottom: 20px;
     }
 
     .sub{
         width: 90%;
-        float: none;
-        margin-top: 20px;
-        margin-left: 20px;
+        margin-left: -10px;
         border-radius: 10px;
-    }
-
-
-    .sub:hover{
-        background-color: darkblue;
+        height: 50px;
     }
 
 }
-
